# xbot2_description

./: CMakeLists.txt  package.xml  urdf.rviz  urdf_gazebo.rviz
config/: xbot2_control.yaml
launch/: display.launch  gazebo.launch
launch/include/: xbot2.launch.xml
meshes/: base_link.STL  pitch_platform.dae  pitch_platform.stl  yaw_platform.dae
models/ISCAS_Museum/meshes/: ISCAS_museum2.dae
models/ISCAS_groundplane/: model.sdf
scripts/: xbot2_keyboard_teleop.py~
urdf/: robot.urdf.xacro  robot.xacro  sick_tim.gazebo.xacro  sick_tim.urdf.xacro  xbot2.gazebo  xbot2.gazebo.xacro  xbot2.urdf  xbot2.urdf.xacro
worlds/: ROS-Academy.world
