<package>
  <name>xbot2_description</name>
  <version>0.0.1</version>
  <description>
    URDF for Xbot2 Robot.
  </description>
  <author>Changkun</author>
  <maintainer email="chaichangkun@163.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models/"/>
  </export>
</package>
